--- a/_sass/modules/misc.scss
+++ b/_sass/modules/misc.scss
@@ -9,6 +9,10 @@ body {
   /*background: #F6F6F6;*/
 }
 
+.muted {
+  color: #777;
+}
+
 .center {
   text-align: center;
 }
@@ -17,6 +21,10 @@ body {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
+}
+
+.hr-thick {
+  border: 2px solid #000;
 }
 
 .title {
@@ -65,6 +73,7 @@ body {
 .image-round {
   border-radius: 160px;
 }
+
 
 // .grid-teaser {
 //   border-bottom: 5px solid #000000;
@@ -253,8 +262,14 @@ body {
 
 /* Series */
 .series-promo {
-  background: #eee;
+  // background: #eee;
   padding-bottom: 15px;
+  a p{
+    color: #000;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: justify;
+  }
 }
 
 .series-promo h1, .series-promo p {
@@ -271,6 +286,7 @@ body {
 .article-title-list {
   margin: 0;
   padding: 0;
+  margin-bottom: 20px;
   li {
     box-sizing: border-box;
     background: url(../img/icon-arrow-right.png) right 49% no-repeat;
