--- a/css/styles.css
+++ b/css/styles.css
@@ -5695,6 +5695,18 @@ body {
   display: block;
 }
 
+.divider:after {
+  background: none repeat scroll 0 0 #000000;
+  bottom: 0;
+  content: " ";
+  height: 5px;
+  left: 0;
+  margin: 0 auto;
+  position: absolute;
+  right: 0;
+  width: 25px;
+}
+
 .image-round {
   border-radius: 160px;
 }
@@ -5807,7 +5819,7 @@ body {
 }
 
 .overlay h1, .overlay p {
-  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8);
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.1);
   padding: 15px;
 }
 
@@ -5867,15 +5879,6 @@ body {
   color: #999;
 }
 
-.portait {
-  margin-top: 20px;
-  border-top: 1px solid #555;
-}
-
-.portrait h2 {
-  color: white;
-}
-
 /* Series */
 .series-promo {
   padding-bottom: 15px;
@@ -5895,6 +5898,26 @@ body {
   font-size: 28px;
   line-height: 30px;
   text-align: center;
+}
+
+.hero {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 300px;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  z-index: 0;
+  margin-top: 20px;
+  border-top: 1px solid #555;
+}
+.hero h2, .hero a {
+  color: white;
+}
+
+.stick-to-footer {
+  margin-bottom: -20px;
 }
 
 .article-title-list {
