--- a/css/modules/misc.css
+++ b/css/modules/misc.css
@@ -3,7 +3,6 @@
   display: none;
 }
 
-
 /* General */
 body {
   /*background: #F6F6F6;*/
@@ -37,7 +36,6 @@ body {
 
 .section-heading {
   text-transform: uppercase;
-  // color: #333;
 }
 
 .col-heading {
@@ -74,42 +72,34 @@ body {
   border-radius: 160px;
 }
 
-
-// .grid-teaser {
-//   border-bottom: 5px solid #000000;
-//   margin-bottom: 30px;
-// }
-
-
 /* Top bar */
 .top-bar {
   margin-bottom: 0;
 }
+
 /*
 .top-bar-section li a:not(.button) {
   background: white;
   line-height: 45px;
   padding: 0 15px;
 }*/
-
 .section-header {
   background: #C80000;
   margin-bottom: 15px;
 }
 
 .section-header h1 {
- font-size: 18px;
- margin: 10px 0;
- text-transform: uppercase;
- font-weight: 300;
+  font-size: 18px;
+  margin: 10px 0;
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
-.section-header h1 a{
- color: white;
+.section-header h1 a {
+  color: white;
 }
 
 /* TL menu */
-
 .tl-page {
   background: #F4FAFC;
   margin-top: -10px;
@@ -136,7 +126,7 @@ body {
   text-align: center;
 }
 
-.top-menu li{
+.top-menu li {
   display: inline-block;
   margin-right: 10px;
   list-style: none;
@@ -176,7 +166,6 @@ body {
 }
 
 /* News section */
-
 .overlay h1, .overlay p {
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0.1);
   padding: 15px;
@@ -207,19 +196,19 @@ body {
   margin: 30px 0;
   border-top: 1px dotted #ddd;
   border-bottom: 1px dotted #ddd;
-  article {
-    min-height: 250px;
-  }
+}
+.article-grid article {
+  min-height: 250px;
 }
 
 .most-popular {
   background: #ffffe5;
 }
 
-.small-6.story-promo h1{
+.small-6.story-promo h1 {
   font-size: 16px;
   line-height: 18px;
-} 
+}
 
 .small-6.story-promo article {
   min-height: 198px;
@@ -240,14 +229,13 @@ body {
 
 /* Series */
 .series-promo {
-  // background: #eee;
   padding-bottom: 15px;
-  a p{
-    color: #000;
-    font-size: 14px;
-    line-height: 18px;
-    text-align: justify;
-  }
+}
+.series-promo a p {
+  color: #000;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: justify;
 }
 
 .series-promo h1, .series-promo p {
@@ -269,54 +257,47 @@ body {
   position: relative;
   width: 100%;
   z-index: 0;
-  // border-top: 1px solid #555;
-  h2, a {
-  color: white;
-  }
+  margin-top: 20px;
+  border-top: 1px solid #555;
 }
-
-.hero-label {
- text-transform: uppercase;
- font-weight: 200;
- margin-top: 20px; 
+.hero h2, .hero a {
+  color: white;
 }
 
 .stick-to-footer {
   margin-bottom: -20px;
 }
 
-// Article title list
 .article-title-list {
   margin: 0;
   padding: 0;
   margin-bottom: 20px;
-  li {
-    box-sizing: border-box;
-    background: url(../img/icon-arrow-right.png) right 49% no-repeat;
-    border-bottom: 1px solid #E5E5E5;
-    font-family: "Arial Black",Arial,sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    list-style-type: none;
-    margin: 0 auto;
-    padding: 0 18px 0 0;
-    position: relative;
-    a {
-      display: block;
-      padding: 13px 0 10px;
-      color: #000;
-    }
-    a:hover {
-      color: #000;
-    }
-  }
-  .first-item {
-    border-top: 1px solid #E5E5E5;
-  }
+}
+.article-title-list li {
+  box-sizing: border-box;
+  background: url(../img/icon-arrow-right.png) right 49% no-repeat;
+  border-bottom: 1px solid #E5E5E5;
+  font-family: "Arial Black",Arial,sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  list-style-type: none;
+  margin: 0 auto;
+  padding: 0 18px 0 0;
+  position: relative;
+}
+.article-title-list li a {
+  display: block;
+  padding: 13px 0 10px;
+  color: #000;
+}
+.article-title-list li a:hover {
+  color: #000;
+}
+.article-title-list .first-item {
+  border-top: 1px solid #E5E5E5;
 }
 
 /* Elements */
-
 .panel ul {
   padding-left: 20px;
   font-size: 0.8em;
@@ -334,13 +315,11 @@ body {
   margin-top: 40px;
 }
 
-
 /* Site footer */
-
 .site-footer {
   background: #eee;
   border-top: 1px dotted #999;
-  padding: 25px 0; 
+  padding: 25px 0;
   margin-top: 15px;
   clear: both;
 }
