--- a/css/styles.css
+++ b/css/styles.css
@@ -5805,19 +5805,6 @@ body {
 }
 
 /* News section */
-.has-background {
-  position: relative;
-}
-
-.background-image {
-  position: absolute;
-}
-
-.overlay {
-  color: white;
-  float: left;
-}
-
 .overlay h1, .overlay p {
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0.1);
   padding: 15px;
@@ -5909,11 +5896,15 @@ body {
   position: relative;
   width: 100%;
   z-index: 0;
-  margin-top: 20px;
-  border-top: 1px solid #555;
 }
 .hero h2, .hero a {
   color: white;
+}
+
+.hero-label {
+  text-transform: uppercase;
+  font-weight: 200;
+  margin-top: 20px;
 }
 
 .stick-to-footer {
@@ -6396,10 +6387,6 @@ abbr.published:before {
     margin-bottom: 0;
   }
 
-  .overlay {
-    max-width: 33%;
-  }
-
   .global-footer {
     text-align: left;
     font-size: 16px;
@@ -6450,4 +6437,9 @@ abbr.published:before {
   transition: all 300ms ease-out;
   border-color: #000;
   color: #000;
+}
+
+.btn-simple.light {
+  color: white;
+  border-color: white;
 }
