Made separate mag layout and updated search

--- a/_includes/serp.html
+++ b/_includes/serp.html
@@ -17,10 +17,10 @@
             YEARBOOK MESSAGE INCLUDES PHRASE 'FOXY'
           </div> -->
 
-          <h2 itemprop="headline" class="story-title entry-title">
-            <a class="story-title-link story-link" rel="bookmark" itemprop="url" href="http://swampland.time.com/2013/05/23/time-exclusive-obamas-1979-prom-photos/?iid=sl-main-lead">
+          <h2 itemprop="headline" class="story-title serp-title">
+            <a class="" rel="bookmark" itemprop="url" href="http://swampland.time.com/2013/05/23/time-exclusive-obamas-1979-prom-photos/?iid=sl-main-lead">
 
-              <mark>Obama</mark>'s Prom Photos
+              <mark>Obama</mark>s viltre ungdomstid
             </a>
             <br>
           </h2>
@@ -43,7 +43,7 @@
 
           
         </header>
-        <p itemprop="description" class="story-description entry-content">Kelli Allman / Contact Press Images From left: Greg Orme, Kelli Allman, Barack <mark>Obama</mark> and Megan Hughes CK at Allman’s parents’ house in Honolulu. </p>
+        <p itemprop="description" class="story-description">Én ting har USAs 10 siste presidenter til felles: Ungdomstiden deres var fylt med fester, fester og atter fester. <mark>Obama</mark> og kona er intet unntak. Se hva som gjør at de ikke liker å vise ... </p>
       </div>
 
 </article>
