--- a/_sass/modules/_search.scss
+++ b/_sass/modules/_search.scss
@@ -61,6 +61,9 @@
   font-size: 1.375em;
   line-height: 25px;
   margin-bottom: 1px;
+  a {
+    color: #000;
+  }
 }
 
 mark {
@@ -108,4 +111,5 @@ abbr.published:before {
   margin: 0;
   padding: 0;
   line-height: 20px;
+  color: #666;
 }
