--- a/css/styles.css
+++ b/css/styles.css
@@ -5673,6 +5673,10 @@ body {
   word-wrap: break-word;
 }
 
+.icon-search {
+  padding-top: 12px;
+}
+
 .section-heading {
   text-transform: uppercase;
 }
@@ -5693,18 +5697,6 @@ body {
   font-size: 24px;
   line-height: 24px;
   display: block;
-}
-
-.divider:after {
-  background: none repeat scroll 0 0 #000000;
-  bottom: 0;
-  content: " ";
-  height: 5px;
-  left: 0;
-  margin: 0 auto;
-  position: absolute;
-  right: 0;
-  width: 25px;
 }
 
 .image-round {
@@ -6307,6 +6299,9 @@ figure.inline-media {
   line-height: 25px;
   margin-bottom: 1px;
 }
+.story-title a {
+  color: #000;
+}
 
 mark {
   font-weight: bold;
@@ -6353,6 +6348,7 @@ abbr.published:before {
   margin: 0;
   padding: 0;
   line-height: 20px;
+  color: #666;
 }
 
 .article-wrapper + .ads {
