grid style 2 done. button tweaks. misc.

--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -35,8 +35,8 @@
           <a href="#" class="">Abonnér</a>
         </li>
         <li class="divider"></li>
-        <li class="icon-search">
-          <a href="search.html" class=""><img src="img/icon-search.png"></a>
+        <li class="">
+          <a href="search.html" class="">Søk</a>
         </li>
       </ul>
     </section>
