--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -5,9 +5,29 @@
   @include single-transition;
   border-color: #000;
   color: #000;
+  &:hover {
+    border-color: $primary-color;
+  }
+}
+
+.btn-simple.soft {
+  color: #999;
+  border-color: #bbb;
+  &:hover {
+    color: #000;
+    border-color: #000;
+  }
 }
 
 .btn-simple.light {
   color: white;
   border-color: white;
+  &:hover {
+    border-color: $primary-color;
+    color: $primary-color;
+  }
+}
+
+.btn-simple.small {
+  font-size: 12px;
 }
