Article list styles pt 1

--- a/_sass/modules/_misc.scss
+++ b/_sass/modules/_misc.scss
@@ -229,13 +229,12 @@ body {
 }
 
 // Article title list
-.article-title-list {
+.article-titles {
   margin: 0;
   padding: 0;
   margin-bottom: 20px;
   li {
     box-sizing: border-box;
-    background: url(../img/icon-arrow-right.png) right 49% no-repeat;
     border-bottom: 1px solid #E5E5E5;
     font-family: "Arial Black",Arial,sans-serif;
     font-size: 14px;
@@ -247,7 +246,7 @@ body {
     a {
       display: block;
       padding: 13px 0 10px;
-      color: #000;
+      color: #333;
     }
     a:hover {
       color: #000;
@@ -255,6 +254,15 @@ body {
   }
   li:nth-child(1) {
     border-top: 1px solid #E5E5E5;
+  }
+}
+
+.titles-bbc {
+  li {
+    background: url(../img/icon-arrow-right.png) right 49% no-repeat;
+  }
+  a {
+    color: #000;
   }
 }
 
