--- a/_includes/article-title-list-2.html
+++ b/_includes/article-title-list-2.html
@@ -1,12 +1,14 @@
-<ul class="article-titles titles-bbc">
+<ul class="article-titles">
     <li class="first-item">
         <article>
-            <a href="#" class="">Husarbeid og barnepass er ikke kulturutveksling</a>
+            <a href="#" class="">Husarbeid og barnepass er ikke kulturutveksling<div class="published">
+                    <time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">30.06.2013</time>
+                </div></a>
         </article>
     </li>
     <li>
         <article>
-            <a href="#" class="">Bli meg hjem til Sandra Lyng Haugens gale bestefar
+            <a href="#" class="">Bli meg hjem til Sandra Lyng Haugens gale bestefar (BYO hagle)
             </a>
         </article>
     </li>
