Styling to move elements around better

--- a/_sass/modules/_article-grid.scss
+++ b/_sass/modules/_article-grid.scss
@@ -30,7 +30,7 @@
   line-height: 16px;
 }
 
-.article-grid p, .top p {
+.article-grid p {
   color: #999;
 }
 
@@ -43,7 +43,7 @@
     display: none;
   }
 }
-.grid-style-1 img, .top img {
+.grid-style-1 img {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
