--- a/_includes/hero-section-footer.html
+++ b/_includes/hero-section-footer.html
@@ -1,4 +1,4 @@
-<section class="portrait hero-section has-background stick-to-top front-section">
+<section class="portrait hero-section has-background stick-to-footer front-section">
     <div style="background-image: url(&quot;http://cdn.thedailybeast.com/content/newsweek/2013/05/22/issue/jcr:content/issue/cover/image.full.1280.1024.jpg/1369845942544.cached.jpg&quot;); height: 704px;" class="hero">
         <div class="overlay center">
                 <div class="row">
