--- a/_sass/modules/_misc.scss
+++ b/_sass/modules/_misc.scss
@@ -80,6 +80,10 @@ body {
   display: block;
 }
 
+.aside-heading {
+  text-transform: uppercase;
+}
+
 // .divider:after {
 //   background: none repeat scroll 0 0 #000000;
 //   bottom: 0;
