--- a/css/styles.css
+++ b/css/styles.css
@@ -5714,6 +5714,10 @@ body {
   display: block;
 }
 
+.aside-heading {
+  text-transform: uppercase;
+}
+
 .image-round {
   border-radius: 160px;
 }
