--- a/_includes/article-title-list-2.html
+++ b/_includes/article-title-list-2.html
@@ -1,32 +1,35 @@
 <ul class="article-titles">
     <li class="first-item">
         <article>
-            <a href="#" class="">Husarbeid og barnepass er ikke kulturutveksling<div class="published">
-                    <time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">30.06.2013</time>
-                </div></a>
+            <a href="#" class="">Husarbeid og barnepass er ikke kulturutveksling <span class="published"><time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">30. juni</time>
+                </span></a>
         </article>
     </li>
     <li>
         <article>
-            <a href="#" class="">Bli meg hjem til Sandra Lyng Haugens gale bestefar (BYO hagle)
+            <a href="#" class="">Bli meg hjem til Sandra Lyng Haugens gale bestefar (BYO hagle) <span class="published"><time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">28. juni</time>
+                </span>
             </a>
         </article>
     </li>
      <li>
         <article>
-            <a href="#" class="">Morgendagens biler trenger bare luft
+            <a href="#" class="">Morgendagens biler trenger bare luft <span class="published"><time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">26. juni</time>
+                </span>
             </a>
         </article>
     </li>
      <li>
         <article>
-            <a href="#" class="">Hvor mange svensker trengs for å drive en kafé?
+            <a href="#" class="">Hvor mange svensker trengs for å drive en kafé? <span class="published"><time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">24. juni</time>
+                </span>
             </a>
         </article>
     </li>
      <li>
         <article>
-            <a href="#" class="">Den velsignede innvandringen
+            <a href="#" class="">Den velsignede innvandringen <span class="published"><time title="Publisert 28.06.2013, kl. 07:37, Sist oppdatert 26.04.2013, kl. 09:43" pubdate="" datetime="2013-04-26">22. juni</time>
+                </span>
             </a>
         </article>
     </li>
