misc content updates, i think

--- a/css/styles.css
+++ b/css/styles.css
@@ -5718,7 +5718,7 @@ body {
   text-transform: uppercase;
 }
 
-.published {
+li .published {
   font-family: "Helvetica Neue", arial;
   font-weight: normal;
   color: #888;
