--- a/_sass/modules/_misc.scss
+++ b/_sass/modules/_misc.scss
@@ -84,7 +84,7 @@ body {
   text-transform: uppercase;
 }
 
-.published {
+li .published {
   font-family: "Helvetica Neue", arial;
   font-weight: normal;
   color: #888;
