Static page design + content

--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -32,7 +32,7 @@
         <li><a href="#">Kultur</a></li>
         <li class="divider"></li>
         <li class="">
-          <a href="#" class="">Abonnér</a>
+          <a href="static.html" class="">Abonnér</a>
         </li>
         <li class="divider"></li>
         <li class="">
