--- a/_sass/modules/_misc.scss
+++ b/_sass/modules/_misc.scss
@@ -216,7 +216,9 @@ li .published {
   padding: 15px;
 }
 
-
+.border-bottom {
+  border-bottom: 1px solid #dedede;
+}
 
 .hero {
   background-position: center center;
@@ -237,6 +239,15 @@ li .published {
  text-transform: uppercase;
  font-weight: 200;
  margin-top: 20px; 
+}
+
+.overlay-invert {
+  a {
+    color: #000;
+  }
+  p, h1 {
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.1)
+  }
 }
 
 .stick-to-footer {
