--- a/css/styles.css
+++ b/css/styles.css
@@ -5829,6 +5829,10 @@ li .published {
   padding: 15px;
 }
 
+.border-bottom {
+  border-bottom: 1px solid #dedede;
+}
+
 .hero {
   background-position: center center;
   background-repeat: no-repeat;
@@ -5847,6 +5851,13 @@ li .published {
   text-transform: uppercase;
   font-weight: 200;
   margin-top: 20px;
+}
+
+.overlay-invert a {
+  color: #000;
+}
+.overlay-invert p, .overlay-invert h1 {
+  background: none repeat scroll 0 0 rgba(255, 255, 255, 0.1);
 }
 
 .stick-to-footer {
