--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -27,9 +27,9 @@
     <section class="top-bar-section">
       <ul class="right">
         <li class="divider"></li>
-        <li><a href="#">Meninger</a></li>
+        <li><a href="section-ledere.html">Meninger</a></li>
         <li class="divider"></li>
-        <li><a href="#">Kultur</a></li>
+        <li><a href="section-mag.html">Kultur</a></li>
         <li class="divider"></li>
         <li class="">
           <a href="static.html" class="">Abonnér</a>
