labels in teasers

--- a/_includes/article-grid.html
+++ b/_includes/article-grid.html
@@ -45,7 +45,7 @@
                 <img alt="" src="http://gfx.dagbladet.no/labrador/268/268435/26843519/jpg/active/646x270.jpg">
                 <header>
                     <h1 class="title">Bruk smertepillene riktig</h1>
-                    <p class="lead">Bruken av reseptbelagte smertepiller øker.</p>
+                    <p class="lead"><span class="radius secondary label">Helse</span> Bruken av reseptbelagte smertepiller øker.</p>
                 </header>
                 <a class="btn-simple small soft" href="#">Les mer</a>       
                 </a>
@@ -70,7 +70,7 @@
             <a href="story-n.html">
             <header>
                 <h1 class="title">Husarbeid og barnepass er ikke kulturutveksling når det er påtvunget, sier eliten</h1>
-                <p class="lead">Det kan være et moderne slaveri, og ingen er uskyldige her, skriver Allerotte Simonsen.</p>
+                <p class="lead"><span class="radius secondary label">Samfunn</span> Det kan være et moderne slaveri, og ingen er uskyldige her, skriver Allerotte Simonsen.</p>
             </header>
             <a class="btn-simple small soft" href="#">Les mer</a>     
             </a>
