--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -188,5 +188,11 @@
   <script>
     $(document).foundation();
   </script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/fitvids/1.0.1/jquery.fitvids.min.js"></script>
+<script>
+  $(document).ready(function(){
+    $("#video-wrapper").fitVids();
+  });
+</script>
 </body>
 </html>
