--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -11,6 +11,7 @@
   
 
   <script src="js/vendor/custom.modernizr.js"></script>
+  <script src="js/vendor/holder.js"></script>
 
 </head>
 <body>
@@ -44,58 +45,6 @@
 
   {{ content }}
 
-
-<!--   <footer class="site-footer">
-
-    <div class="row">
-
-      <div class="contact-info large-3 columns center">
-          <img src="img/nf-logo.png" class="fixed-width">
-          <dl class="">
-            <dt>Postadresse:</dt>
-            <dd>Boks 1000 Sentrum, 0100 Oslo</dd>
-            <dt>Besøksadresse:</dt>
-            <dd>Akersgata 1, 0100 Oslo</dd>
-            <dt>Sentralbord/Redaksjonen:</dt>
-            <dd><a href="tel:+4705000">69300000</a></dd>
-          </dl>
-      </div>
-      
-      <div class="large-3 columns hide-for-small">
-              <dl>
-              <dt>Forsida ble sist oppdatert:</dt>
-              <dd><time>Tirsdag 30.05.2013, 17:04</time></dd>
-          </dl>
-      </div>
-      
-      <div class="large-3 columns hide-for-small">
-        <nav>
-            <ul>
-              <li><a href="http://www.dagbladet.no/stillinger/">Jobb i NewsFront</a></li>
-              <li><a href="#">Link 2</a></li>
-              <li><a href="#">Personvernavtale</a></li>
-            </ul>
-          </nav>
-      </div>
-      
-      <div class="large-3 columns hide-for-small">
-        <div href="#" class="inverse button dropdown radius tip">
-            <a href="#">Tips oss <span class="tel">6700</span></a>
-            <span></span>
-        </div>
-      </div>
-
-      <hr>
-      
-      <div class="large-12 columns">
-        <p class="the-end">
-          <strong>Ansvarlig redaktør: </strong> <a href="mailto:fake@newsfront.no">Ola Nordmann</a>
-          <span class="frontkom-logo">© 2013</span> <a href="#" >Drupal CMS: <span >Frontkom</span></a>
-        </p>
-      </div>
-    </div>
-  </footer> -->
-
   <footer class="global-footer">
     <div class="links-bar row">
       <div class="large-3 columns">
@@ -117,19 +66,6 @@
       </div>
     </div>
 
-    <!-- <div class="row newsletter-signup">
-        <div class="large-4 columns right">
-          <div class="row collapse">
-            <div class="small-10 columns">
-              <input type="text" placeholder="Abonnér på nyhetsbrev">
-            </div>
-            <div class="small-2 columns">
-              <a href="#" class="button prefix">Send</a>
-            </div>
-          </div>
-        </div>
-    </div>
- -->    
     <div class="final-bar clearfix hide-mobile">
       <div class="row">
         <div class="contact-info large-12 columns center">
