Mobile ads basics and some desktop ads

--- a/_includes/ad-desktop-1.html
+++ b/_includes/ad-desktop-1.html
@@ -1,4 +1,4 @@
-<div class="widget ads row hide-for-large-up ">
+<div class="widget ads row show-for-small">
   <div class="ad ad-phone small-centered small-12 columns">
       <img src="holder.js/468x200/text:Ad 468x200" />
   </div>
