Better ads classes

--- a/_includes/ad-desktop-1.html
+++ b/_includes/ad-desktop-1.html
@@ -1,5 +1,5 @@
-<div class="widget ads row show-for-small">
-  <div class="ad ad-phone small-centered small-12 columns">
-      <img src="holder.js/468x200/text:Ad 468x200" />
-  </div>
+<div class="widget ads row hide-for-medium-down">
+    <div class="ad ad-desktop large-centered large-12 columns">
+        <img src="holder.js/980x150/text:Ad 980x150" />
+    </div>
 </div>
