Some work on testing search solutions on search.html

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -54,6 +54,7 @@
 @import "modules/misc";
 @import "modules/article";
 @import "modules/search";
+@import "modules/search-box";
 @import "modules/ads";
 @import "modules/responsive";
 @import "modules/buttons";
