--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -120,7 +120,11 @@
   <script src="js/foundation/foundation.topbar.js"></script>
   
   -->
-  
+  <script src="js/vendor/classie.js"></script>
+  <script src="js/vendor/uisearch.js"></script>
+  <script>
+    new UISearch( document.getElementById( 'sb-search' ) );
+  </script>
   <script>
     $(document).foundation();
   </script>
