Don't show ad on tablet size

--- a/_sass/modules/_ads.scss
+++ b/_sass/modules/_ads.scss
@@ -61,7 +61,7 @@ header + .ads {
 // Before site
 .top-wrapper {
   border-bottom: 1px solid #ddd;
-  .hide-for-large-up .ad {
+  .show-for-small .ad {
     padding-left: 0;
     padding-right: 0;
   } 
