#3437 Implement Smacss skeleton, and use compass gem of normalize lib
- To install normalize, run $gem install compass-normalize

--- a/_layouts/zurb.html
+++ b/_layouts/zurb.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width" />
   <title>NewsFront</title>
 
-  <link rel="stylesheet" href="css/styles.css" />
-  
+  <link rel="stylesheet" href="css/style.css" />
+
 
   <script src="js/vendor/custom.modernizr.js"></script>
 
 </head>
 <body>
-  <div class="top-wrapper"> 
+  <div class="top-wrapper">
     {% include ad-mobile.html %}
   </div>
   <nav class="top-bar">
@@ -38,7 +38,7 @@
         </li>
       </ul>
     </section>
-  </nav> 
+  </nav>
 
   <header class="section-header">
     <div class="row">
@@ -66,14 +66,14 @@
             <dd><a href="tel:+4705000">69300000</a></dd>
           </dl>
       </div>
-      
+
       <div class="large-3 columns hide-for-small">
               <dl>
               <dt>Forsida ble sist oppdatert:</dt>
               <dd><time>Tirsdag 30.05.2013, 17:04</time></dd>
           </dl>
       </div>
-      
+
       <div class="large-3 columns hide-for-small">
         <nav>
             <ul>
@@ -83,7 +83,7 @@
             </ul>
           </nav>
       </div>
-      
+
       <div class="large-3 columns hide-for-small">
         <div href="#" class="inverse button dropdown radius tip">
             <a href="#">Tips oss <span class="tel">6700</span></a>
@@ -92,7 +92,7 @@
       </div>
 
       <hr>
-      
+
       <div class="large-12 columns">
         <p class="the-end">
           <strong>Ansvarlig redaktør: </strong> <a href="mailto:fake@newsfront.no">Ola Nordmann</a>
@@ -135,7 +135,7 @@
           </div>
         </div>
     </div>
- -->    
+ -->
     <div class="final-bar clearfix hide-mobile">
       <div class="row">
         <div class="contact-info large-12 columns center">
@@ -157,40 +157,40 @@
   ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
   '.js><\/script>')
   </script>
-  
+
   <script src="js/foundation.min.js"></script>
   <!--
-  
+
   <script src="js/foundation/foundation.js"></script>
-  
+
   <script src="js/foundation/foundation.alerts.js"></script>
-  
+
   <script src="js/foundation/foundation.clearing.js"></script>
-  
+
   <script src="js/foundation/foundation.cookie.js"></script>
-  
+
   <script src="js/foundation/foundation.dropdown.js"></script>
-  
+
   <script src="js/foundation/foundation.forms.js"></script>
-  
+
   <script src="js/foundation/foundation.joyride.js"></script>
-  
+
   <script src="js/foundation/foundation.magellan.js"></script>
-  
+
   <script src="js/foundation/foundation.orbit.js"></script>
-  
+
   <script src="js/foundation/foundation.placeholder.js"></script>
-  
+
   <script src="js/foundation/foundation.reveal.js"></script>
-  
+
   <script src="js/foundation/foundation.section.js"></script>
-  
+
   <script src="js/foundation/foundation.tooltips.js"></script>
-  
+
   <script src="js/foundation/foundation.topbar.js"></script>
-  
+
   -->
-  
+
   <script>
     $(document).foundation();
   </script>
