--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width" />
   <title>NewsFront magasin</title>
 
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/style.css" />
 
   <script src="js/vendor/jquery.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fitvids/1.0.1/jquery.fitvids.min.js"></script>
