--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,8 +1,34 @@
-// Global Foundation Settings
-@import "settings";
+// Style File
+//
+// This file gets turned into style.css. This file should really
+//  hold nothing except for imports of your base, layout, and design
+//  partials.
 
-// Comment out this import if you don't want to use normalize
-@import "normalize";
+// Legacy support
+$legacy-support-for-ie6: false;
+$legacy-support-for-ie7: false;
+$legacy-support-for-ie8: false;
+$legacy-support-for-mozilla: false;
+
+// Global Import
+@import 'partials/global/base';
+
+// Import Base
+@import 'partials/base/base';
+
+// Import Layouts
+@import 'partials/layout/layout';
+
+// Import Modules
+@import 'partials/module/module';
+
+// Import States
+@import 'partials/state/state';
+
+// Foundation
+
+// Global Foundation Settings
+@import "foundation-settings";
 
 // Comment out this import if you are customizing you imports below
 @import "foundation";
@@ -46,3 +72,12 @@
 // @import "foundation/components/tooltips";
 // @import "foundation/components/dropdown";
 
+// Modules
+@import "modules/misc";
+@import "modules/article";
+@import "modules/search";
+@import "modules/search-box";
+@import "modules/ads";
+@import "modules/responsive";
+@import "modules/buttons";
+@import "modules/article-grid";
